# script

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
crates/analyzer/: Cargo.toml
crates/analyzer/src/: access.rs  assign.rs  call.rs  constant.rs  def.rs  dep.rs  err.rs  generate.rs  instantiate.rs  instantiator.rs  internal.rs  lib.rs  literal.rs  lookup.rs  modules.rs  ns.rs  operator.rs  optional.rs  pattern.rs  prelude.rs  structure.rs  types.rs  variable.rs
crates/analyzer/tests/: analyze.rs  analyzer.rs  ffi.rs  generic.rs  intrinsic.rs  map.rs  semantic.rs  slice.rs  sparse.rs  util.rs  vec.rs
crates/analyzer/tests/fixtures/first/: main.swamp
crates/ast/: Cargo.toml  README.md
crates/ast/src/: lib.rs  prelude.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: main.rs
crates/code-gen/: Cargo.toml  README.md
crates/code-gen-program/: Cargo.toml
crates/code-gen-program/src/: lib.rs
crates/code-gen/src/: alloc.rs  alloc_util.rs  constants.rs  ctx.rs  lib.rs  location.rs  vec.rs
crates/code-gen/tests/: code_gen.rs
crates/collections/: Cargo.toml
crates/collections/assets/collections-0.0.0/: lib.swamp
crates/collections/src/: extra.rs  lib.rs  sparse.rs
crates/compile/: Cargo.toml  README.md
crates/compile/src/: lib.rs
crates/compile/tests/: analyze.rs  util.rs
crates/core/: Cargo.toml  README.md
crates/core-extra/: Cargo.toml  README.md
crates/core-extra/src/: cnv.rs  export.rs  extra.rs  grid.rs  idx_gen.rs  lib.rs  map2.rs  prelude.rs  qck_des.rs  typereg.rs  value.rs
crates/core-extra/tests/: core.rs
crates/core/assets/core-0.0.0/: lib.swamp
crates/core/src/: cnv.rs  export.rs  extra.rs  idx_gen.rs  lib.rs  prelude.rs  qck_des.rs  typereg.rs  value.rs
crates/core/tests/: core.rs
crates/dep-loader/: Cargo.toml  README.md
crates/dep-loader/src/: lib.rs  prelude.rs
crates/dep-loader/tests/: loading.rs
crates/derive/: Cargo.toml  README.md
crates/derive-test/: Cargo.toml
crates/derive-test/tests/: derive.rs
crates/derive/src/: lib.rs
crates/disasm/: Cargo.toml
crates/disasm/src/: lib.rs
crates/doc/: Cargo.toml
crates/doc/src/: lib.rs
crates/doc/tests/: html.rs  util.rs
crates/eira/: Cargo.toml  README.md
crates/eira/src/: lib.rs  prelude.rs
crates/eira/tests/: header.rs  layout.rs  source_section.rs
crates/err/: Cargo.toml  README.md
crates/err/src/: analyze.rs  dep.rs  lib.rs  loader.rs  parse.rs  prelude.rs  runtime.rs  script_resolve.rs  semantic.rs
crates/err/tests/: err.rs
crates/eval/: Cargo.toml  README.md
crates/eval-loader/: Cargo.toml
crates/eval-loader/src/: lib.rs  prelude.rs
crates/eval-loader/tests/: analyzer.rs  load.rs  util.rs
crates/eval/src/: block.rs  def.rs  err.rs  extra.rs  func.rs  lib.rs  module.rs  name.rs  ns.rs  prelude.rs  value.rs  value_both.rs  value_ref.rs
crates/eval/tests/: alias.rs  array.rs  assign_mut.rs  basic_eval.rs  constant.rs  destructuring.rs  float.rs  for_expr.rs  func_ref.rs  int.rs  interpreter.rs  location.rs  map.rs  match_expr.rs  option.rs  rest.rs  sparse.rs  string.rs  tuple_floats.rs  util.rs  with.rs
crates/examples/: Cargo.toml
crates/examples/src/: main.rs
crates/examples/tests/: derive.rs
crates/extra/: Cargo.toml
crates/extra/src/: lib.rs  sparse.rs
crates/ffi/: Cargo.toml
crates/ffi/src/: lib.rs
crates/modules/: Cargo.toml  README.md
crates/modules/src/: lib.rs  modules.rs  ns.rs  prelude.rs  symtbl.rs
crates/namespace/: Cargo.toml
crates/namespace/src/: lib.rs  ns.rs
crates/node/: Cargo.toml  README.md
crates/node/src/: lib.rs
crates/parser/: Cargo.toml  README.md
crates/parser/src/: grammar.pest  lib.rs  prelude.rs
crates/parser/tests/: grammar.rs  parser.rs  util.rs
crates/pretty-print/: Cargo.toml  README.md
crates/pretty-print/src/: lib.rs
crates/program-analyzer/: Cargo.toml  README.md
crates/program-analyzer/src/: lib.rs
crates/semantic/: Cargo.toml  README.md
crates/semantic/src/: dep.rs  inst_cache.rs  instantiator.rs  intr.rs  lib.rs  module.rs  modules.rs  ns.rs  prelude.rs  resolved.rs  symtbl.rs  type_var_stack.rs
crates/semantic/tests/: semantic.rs  util.rs
crates/source-map/: Cargo.toml  README.md
crates/source-map-lookup/: Cargo.toml  README.md
crates/source-map-lookup/src/: lib.rs
crates/source-map/src/: lib.rs  prelude.rs
crates/source-map/tests/: sourcemap.rs
crates/source-map/tests/fixtures/first/: world.swamp
crates/std/: Cargo.toml  README.md
crates/std/src/: lib.rs  prelude.rs
crates/swamp/: Cargo.toml
crates/swamp-script/: Cargo.toml  README.md
crates/swamp-script/src/: lib.rs  prelude.rs
crates/swamp-script/tests/: run.rs
crates/swamp/src/: lib.rs  prelude.rs
crates/swamp/tests/: run.rs
crates/time-dilation/: Cargo.toml
crates/time-dilation/src/: lib.rs
crates/types/: Cargo.toml  README.md
crates/types/src/: lib.rs  prelude.rs
crates/types/tests/: types.rs
crates/vm/: Cargo.toml
crates/vm-disasm/: Cargo.toml  README.md
crates/vm-disasm/src/: lib.rs
crates/vm-host/: Cargo.toml
crates/vm-host/src/: lib.rs
crates/vm-instr-build/: Cargo.toml
crates/vm-instr-build/src/: lib.rs
crates/vm-test/: Cargo.toml
crates/vm-test/benches/: benchmark.rs
crates/vm-test/src/: lib.rs  util.rs
crates/vm-test/tests/: assign.rs  call.rs  constant.rs  destructuring.rs  guard.rs  host.rs  match_expr.rs  optional.rs  range.rs  string.rs  util.rs  vec.rs  vm.rs  when.rs  while_loop.rs  with.rs
crates/vm-types/: Cargo.toml  README.md
crates/vm-types/src/: aligner.rs  lib.rs  opcode.rs
crates/vm/src/: host.rs  instr_bldr.rs  lib.rs  map.rs  map_open.rs  opcode.rs  string.rs  vec.rs
crates/vm/tests/: run.rs
docs/: basics.md
docs/swamp-lang/: config.toml
docs/swamp-lang/content/: _index.md
docs/swamp-lang/content/roadmap/: _index.md
docs/swamp-lang/content/specification/: _index.md
docs/swamp-lang/syntax-themes/: swamp.sublime-syntax
examples/: main.swamp
scripts/: RELEASE.md  TODO.md  changelog.yaml
(+2 files in other folders)
