[workspace]
resolver = "2"
members = [
    # Root crate
    "crates/swamp",

    # Parser
    "crates/ast",
    "crates/parser",

    # Analyzer
    "crates/semantic",
    "crates/analyzer",


    "crates/dep-loader",
    "crates/program-analyzer",

    # Core and Std
    "crates/core-extra",
    "crates/std",

    # "crates/extra", # Not used yet
    "crates/err",
    "crates/compile",
    "crates/modules",
    "crates/pretty-print",
    "crates/core",
    "crates/types",

    # Code generator
    "crates/code-gen",
    "crates/code-gen-program",

    # VM, move later
    "crates/vm",
    "crates/vm-test",
    "crates/vm-disasm",
    "crates/vm-types",
    "crates/vm-instr-build",
    "crates/vm-host",

    # Evaluator
    "crates/eval",

    # "crates/examples",
]
