[package]
name = "swamp-analyzer"
version = "0.1.10"
edition = "2024"
license = "MIT"
repository = "https://github.com/swamp/swamp"
description = "analyzer for swamp"

[dependencies]
tracing = "0.1.40"
seq-map = "0.0.13"
seq-set = "0.0.2"

swamp-semantic = { path = "../semantic", version = "0.1.10" }
swamp-ast = { path = "../ast", version = "0.1.10" }
swamp-source-map = { path = "../source-map", version = "0.1.10" }
swamp-types = { path = "../types", version = "0.1.10" }
swamp-node = { path = "../node", version = "0.1.10" }
swamp-modules = { path = "../modules", version = "0.1.10" }

[dev-dependencies]
