[package]
name = "swamp-script-cli"
version = "0.0.4"
edition = "2021"
license = "MIT"
repository = "https://github.com/swamp/script"
description = "cli for swamp script"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
pest = "2.7.14" # TODO: remove pest
tracing = "0.1.40"


tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = [
    "registry",
    "env-filter",
] }




# Ast and Parser
swamp-script-parser = { path = "../parser", version = "0.0.4" }
swamp-script-ast = { path = "../ast", version = "0.0.4" }

# Semantic and Analyzer
swamp-script-semantic = { path = "../semantic", version = "0.0.4" }
swamp-script-analyzer = { path = "../analyzer", version = "0.0.4" }

# Runner
swamp-script-eval = { path = "../eval", version = "0.0.4" }
swamp-script-eval-loader = { path = "../eval-loader", version = "0.0.4" }

swamp-script-dep-loader = { path = "../dep-loader", version = "0.0.4" }

[[bin]]
name = "swamp"
path = "src/main.rs"
