[package]
name = "swamp-script-cli"
version = "0.0.10"
edition = "2021"
license = "MIT"
repository = "https://github.com/swamp/script"
description = "cli for swamp script"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1.40"

tracing-subscriber = { version = "0.3.18", features = [
    "registry",
    "env-filter",
] }


# Ast and Parser
swamp-script-parser = { path = "../parser", version = "0.0.10" }
swamp-script-ast = { path = "../ast", version = "0.0.10" }

# Semantic and Analyzer
swamp-script-semantic = { path = "../semantic", version = "0.0.10" }
swamp-script-analyzer = { path = "../analyzer", version = "0.0.10" }

swamp-script-source-map = { path = "../source-map", version = "0.0.10" }

# Runner
swamp-script-eval = { path = "../eval", version = "0.0.10" }
swamp-script-eval-loader = { path = "../eval-loader", version = "0.0.10" }
swamp-script-core = { path = "../core", version = "0.0.10" }

swamp-script-dep-loader = { path = "../dep-loader", version = "0.0.10" }

[[bin]]
name = "swamp"
path = "src/main.rs"
