[package]
name = "swamp-script-code-gen-program"
version = "0.1.9"
edition = "2024"
license = "MIT"
description = "converts a Swamp program to swamp-vm opcodes"
repository = "https://github.com/swamp/script"

[dependencies]
swamp-script-code-gen = { path = "../code-gen", version = "0.1.9" }
swamp-script-compile = { path = "../compile", version = "0.1.9" }
swamp-script-types = { path = "../types", version = "0.1.9" }
swamp-script-semantic = { path = "../semantic", version = "0.1.9" }
swamp-script-modules = { path = "../modules", version = "0.1.9" }
swamp-script-source-map-lookup = { path = "../source-map-lookup", version = "0.1.9" }
swamp-vm-disasm = { path = "../vm-disasm", version = "0.1.9" }

tracing = "0.1.40"
seq-map = "0.0.13"
