[package]
name = "swamp-code-gen-program"
version = "0.1.10"
edition = "2024"
license = "MIT"
description = "converts a Swamp program to swamp-vm opcodes"
repository = "https://github.com/swamp/script"

[dependencies]
swamp-code-gen = { path = "../code-gen", version = "0.1.10" }
swamp-compile = { path = "../compile", version = "0.1.10" }
swamp-types = { path = "../types", version = "0.1.10" }
swamp-semantic = { path = "../semantic", version = "0.1.10" }
swamp-modules = { path = "../modules", version = "0.1.10" }
swamp-source-map-lookup = { path = "../source-map-lookup", version = "0.1.10" }
swamp-vm-disasm = { path = "../vm-disasm", version = "0.1.10" }

tracing = "0.1.40"
seq-map = "0.0.13"
