[package]
name = "swamp-script-code-gen"
version = "0.1.10"
edition = "2024"
license = "MIT"
description = "generates swamp-vm opcodes"
repository = "https://github.com/swamp/script"

[dependencies]
# Swamp VM
swamp-vm-types = { path = "../vm-types", version = "0.1.10" }
swamp-vm-instr-build = { path = "../vm-instr-build", version = "0.1.10" }
swamp-vm-disasm = { path = "../vm-disasm", version = "0.1.10" }

# Swamp script
swamp-script-semantic = { path = "../semantic", version = "0.1.10" }
swamp-script-node = { path = "../node", version = "0.1.10" }
swamp-script-types = { path = "../types", version = "0.1.10" }

swamp-script-source-map-lookup = { path = "../source-map-lookup", version = "0.1.10" }


seq-map = "0.0.13"
tracing = "0.1.40"
