[package]
name = "swamp-code-gen"
version = "0.1.10"
edition = "2024"
license = "MIT"
description = "generates swamp-vm opcodes"
repository = "https://github.com/swamp/swamp"

[dependencies]
# Swamp VM
swamp-vm-types = { path = "../vm-types", version = "0.1.10" }
swamp-vm-instr-build = { path = "../vm-instr-build", version = "0.1.10" }
swamp-vm-disasm = { path = "../vm-disasm", version = "0.1.10" }

# Swamp
swamp-semantic = { path = "../semantic", version = "0.1.10" }
swamp-types = { path = "../types", version = "0.1.10" }

# Source Map
source-map-node = "0.0.1"
source-map-cache = "0.0.1"


seq-map = "0.0.13"
tracing = "0.1.40"
