[package]
name = "swamp-script-compile"
version = "0.1.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/swamp/script"
description = "Compile utility functions"

[dependencies]
swamp-script-source-map = { path = "../source-map", version = "0.1.1" }
# Ast and Parser
swamp-script-parser = { path = "../parser", version = "0.1.1" }
swamp-script-ast = { path = "../ast", version = "0.1.1" }

# Semantic and Analyzer
swamp-script-semantic = { path = "../semantic", version = "0.1.1" }
swamp-script-analyzer = { path = "../analyzer", version = "0.1.1" }
swamp-script-error-report = { path = "../err", version = "0.1.1" }

swamp-script-modules = { path = "../modules", version = "0.1.1" }

# Core and Std
swamp-script-core = { path = "../core", version = "0.1.1" }
swamp-script-std = { path = "../std", version = "0.1.1" }

swamp-script-pretty-print = { path = "../pretty-print", version = "0.1.1" }

swamp-script-dep-loader = { path = "../dep-loader", version = "0.1.1" }
swamp-script-eval-loader = { path = "../eval-loader", version = "0.1.1" }
swamp-script-source-map-lookup = { path = "../source-map-lookup", version = "0.1.1" }

tracing = "0.1.40"
regex = "1.11.1"
tiny-ver = "0.1.2"
seq-map = "0.0.13"


[dev-dependencies]
test-log = { version = "0.2.16", features = ["trace", "log", "color"] }
