[package]
name = "swamp-script-core-extra"
version = "0.0.14"
edition = "2024"
license = "MIT"
repository = "https://github.com/swamp/script"
description = "core parts for swamp evaluator"


[dependencies]
swamp-script-semantic = { path = "../semantic", version = "0.0.14" }
fixed32 = "0.0.17"
seq-map = "0.0.13"
sparse-slot =  { version = "0.0.4"}
tracing = "0.1.40"

[dev-dependencies]
test-log = { version = "0.2.16", features = ["trace", "log", "color"] }
