[package]
name = "swamp-script-core"
version = "0.0.12"
edition = "2021"
license = "MIT"
repository = "https://github.com/swamp/script"
description = "core parts for swamp evaluator"


[dependencies]
swamp-script-semantic = { path = "../semantic", version = "0.0.12" }
fixed32 = "0.0.17"
seq-fmt = "0.0.1"
seq-map = "0.0.13"
sparse-slot = "0.0.3"
