[package]
name = "swamp-script-core"
version = "0.1.8"
edition = "2024"
license = "MIT"
repository = "https://github.com/swamp/script"
description = "core module for Swamp"

[dependencies]
swamp-script-semantic = { path = "../semantic", version = "0.1.8" }
tiny-ver = "0.1.2"
swamp-script-types = { path = "../types", version = "0.1.8" }
swamp-script-node = { path = "../node", version = "0.1.8" }
swamp-script-modules = { path = "../modules", version = "0.1.8" }

[dev-dependencies]
tracing = "0.1.40"
test-log = { version = "0.2.16", features = ["trace", "log", "color"] }
