[package]
name = "swamp-core"
version = "0.1.10"
edition = "2024"
license = "MIT"
repository = "https://github.com/swamp/script"
description = "core module for Swamp"

[dependencies]
swamp-semantic = { path = "../semantic", version = "0.1.10" }
tiny-ver = "0.1.2"
swamp-types = { path = "../types", version = "0.1.10" }
swamp-node = { path = "../node", version = "0.1.10" }
swamp-modules = { path = "../modules", version = "0.1.10" }

[dev-dependencies]
tracing = "0.1.40"
test-log = { version = "0.2.16", features = ["trace", "log", "color"] }
