[package]
name = "swamp-script-dep-loader"
version = "0.1.7"
edition = "2024"
license = "MIT"
repository = "https://github.com/swamp/script"
description = "dependency parser and loader for swamp script"

[dependencies]
tracing = "0.1.40"
seq-map = "0.0.13"
swamp-script-ast = { path = "../ast", version = "0.1.7" }
swamp-script-parser = { path = "../parser", version = "0.1.7" }
swamp-script-source-map = { path = "../source-map", version = "0.1.7" }
dirs = "6.0.0"
