[package]
name = "swamp-dep-loader"
version = "0.1.10"
edition = "2024"
license = "MIT"
repository = "https://github.com/swamp/script"
description = "dependency parser and loader for swamp script"

[dependencies]
tracing = "0.1.40"
seq-map = "0.0.13"
swamp-ast = { path = "../ast", version = "0.1.10" }
swamp-parser = { path = "../parser", version = "0.1.10" }
swamp-source-map = { path = "../source-map", version = "0.1.10" }
time-dilation = { path = "../time-dilation", version = "0.1.10" }

dirs = "6.0.0"
