[package]
name = "swamp-script-derive"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/swamp/script"
description = "derive macros for swamp script"

[dependencies]
quote = "1.0.37"
syn = { version = "2.0.87", features = ["full", "extra-traits"] }
proc-macro2 = "1.0.89"


[lib]
proc-macro = true
