[package]
name = "swamp-script-eval-loader"
version = "0.1.5"
edition = "2024"
license = "MIT"
description = "load swamp-scripts"
repository = "https://github.com/swamp/script"

[dependencies]
swamp-script-dep-loader = { path = "../dep-loader", version = "0.1.5" }
swamp-script-analyzer = { path = "../analyzer", version = "0.1.5" }
swamp-script-semantic = { path = "../semantic", version = "0.1.5" }
swamp-script-source-map = { path = "../source-map", version = "0.1.5" }
swamp-script-modules = { path = "../modules", version = "0.1.5" }
tracing = "0.1.41"

[dev-dependencies]
