[package]
name = "swamp-eval-loader"
version = "0.1.10"
edition = "2024"
license = "MIT"
description = "load swamp-scripts"
repository = "https://github.com/swamp/script"

[dependencies]
swamp-dep-loader = { path = "../dep-loader", version = "0.1.10" }
swamp-analyzer = { path = "../analyzer", version = "0.1.10" }
swamp-semantic = { path = "../semantic", version = "0.1.10" }
swamp-source-map = { path = "../source-map", version = "0.1.10" }
swamp-modules = { path = "../modules", version = "0.1.10" }
time-dilation = { path = "../time-dilation", version = "0.1.10" }

tracing = "0.1.41"

[dev-dependencies]
