[package]
name = "swamp-modules"
version = "0.1.10"
edition = "2024"
license = "MIT"
repository = "https://github.com/swamp/swamp"
description = "Module support for Swamp"

[dependencies]
swamp-semantic = { path = "../semantic", version = "0.1.10" }
swamp-types = { path = "../types", version = "0.1.10" }
swamp-node = { path = "../node", version = "0.1.10" }

seq-map = "0.0.13"
tiny-ver = "0.1.2"
