[package]
name = "swamp-script-parser"
version = "0.1.8"
edition = "2024"
license = "MIT"
repository = "https://github.com/swamp/script"
description = "parser for swamp script"


[dependencies]
pest = "2.7.15"
pest_derive = "2.7.15"
tracing = "0.1.41"

swamp-script-ast = { path = "../ast", version = "0.1.8" }

[dev-dependencies]
test-log = { version = "0.2.16", features = ["trace", "log", "color"] }
