[package]
name = "swamp-parser"
version = "0.1.10"
edition = "2024"
license = "MIT"
repository = "https://github.com/swamp/swamp"
description = "parser for swamp"


[dependencies]
pest = "2.7.15"
pest_derive = "2.7.15"
tracing = "0.1.41"

swamp-ast = { path = "../ast", version = "0.1.10" }

[dev-dependencies]
test-log = { version = "0.2.16", features = ["trace", "log", "color"] }
