[package]
name = "swamp-script-pretty-print"
version = "0.1.3"
edition = "2024"
license = "MIT"
repository = "https://github.com/swamp/script"
description = "pretty print of types and expressions for Swamp"

[dependencies]
tracing = "0.1.40"
seq-map = "0.0.13"
yansi = "1.0.1"

swamp-script-semantic = { path = "../semantic", version = "0.1.3" }
swamp-script-core-extra = { path = "../core-extra", version = "0.1.3" }
swamp-script-modules = { path = "../modules", version = "0.1.3" }
swamp-script-types = { path = "../types", version = "0.1.3" }
