[package]
name = "swamp-pretty-print"
version = "0.1.10"
edition = "2024"
license = "MIT"
repository = "https://github.com/swamp/swamp"
description = "pretty print of types and expressions for Swamp"

[dependencies]
tracing = "0.1.40"
seq-map = "0.0.13"
yansi = "1.0.1"

swamp-semantic = { path = "../semantic", version = "0.1.10" }
swamp-core-extra = { path = "../core-extra", version = "0.1.10" }
swamp-modules = { path = "../modules", version = "0.1.10" }
swamp-types = { path = "../types", version = "0.1.10" }
swamp-source-map-lookup = { path = "../source-map-lookup", version = "0.1.10" }
