[package]
name = "swamp-program-analyzer"
version = "0.1.10"
edition = "2024"
license = "MIT"
description = "Orchestrates the semantic analysis phase for a Swamp program, analyzing parsed modules in the correct dependency order using `swamp-analyzer`."
repository = "https://github.com/swamp/swamp"

[dependencies]
swamp-dep-loader = { path = "../dep-loader", version = "0.1.10" }
swamp-analyzer = { path = "../analyzer", version = "0.1.10" }
swamp-semantic = { path = "../semantic", version = "0.1.10" }
swamp-modules = { path = "../modules", version = "0.1.10" }

swamp-source-map = { path = "../source-map", version = "0.1.10" }

time-dilation = { path = "../time-dilation", version = "0.1.10" }

tracing = "0.1.40"

[dev-dependencies]
