[package]
name = "swamp-script-semantic"
version = "0.1.7"
edition = "2024"
license = "MIT"
repository = "https://github.com/swamp/script"
description = "semantic types for swamp script"

[dependencies]
seq-map = "0.0.13"
fixed32 = "0.0.17"
tracing = "0.1.40"
seq-fmt = "0.0.1"
tiny-ver = "0.1.2"
swamp-script-node = { path = "../node", version = "0.1.7" }
swamp-script-types = { path = "../types", version = "0.1.7" }

[dev-dependencies]
test-log = { version = "0.2.16", features = ["trace", "log", "color"] }
