[package]
name = "swamp-script-source-map-lookup"
version = "0.1.4"
edition = "2024"
license = "MIT"
repository = "https://github.com/swamp/script"
description = "Source map lookup for Swamp"

[dependencies]
swamp-script-node = { path = "../node", version = "0.1.4" }
swamp-script-source-map = { path = "../source-map", version = "0.1.4" }
swamp-script-core-extra = { path = "../core-extra", version = "0.1.4" }
