[package]
name = "swamp-script-source-map"
version = "0.1.10"
edition = "2024"
license = "MIT"
repository = "https://github.com/swamp/script"
description = "Source map cache for Swamp script"

[dependencies]
seq-map = "0.0.13"
tracing = "0.1.41"
test-log = { version = "0.2.16", features = ["trace", "log", "color"] }
pathdiff = "0.2.3"
