[package]
name = "swamp-source-map"
version = "0.1.10"
edition = "2024"
license = "MIT"
repository = "https://github.com/swamp/swamp"
description = "Source map cache for Swamp"

[dependencies]
seq-map = "0.0.13"
pathdiff = "0.2.3"

[dev-dependencies]
test-log = { version = "0.2.16", features = ["trace", "log", "color"] }
