[package]
name = "swamp-script-std"
version = "0.1.7"
edition = "2024"
license = "MIT"
repository = "https://github.com/swamp/script"
description = "standard library for swamp"

[dependencies]
swamp-script-semantic = { path = "../semantic", version = "0.1.7" }
swamp-script-types = { path = "../types", version = "0.1.7" }
