[package]
name = "swamp-std"
version = "0.1.10"
edition = "2024"
license = "MIT"
repository = "https://github.com/swamp/swamp"
description = "standard library for swamp"

[dependencies]
swamp-semantic = { path = "../semantic", version = "0.1.10" }
swamp-types = { path = "../types", version = "0.1.10" }
